CMSC-211 Toegevoegde functionaliteit Hibernate. Deze versie ondersteund Hibernate voor de community/login module.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@26013 91430c5f-d668-0410-9e7d-dd663366dcfd